# personanexus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DISC_CLEANUP_REPORT.md  ENHANCEMENT_SPEC.md  LICENSE  OPENCLAW_INTEGRATION.md  ORCHESTRATION_SPEC.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  validate-pack.yml
agents/: annie.yaml  atlas.yaml  cyberpunkcoder.yaml  forge.yaml  ink.yaml  mybot.yaml  test_agent.yaml
docs/: CNAME  backlog.md  bod spec.rtf  community-pack-marketplace.md  governance-aware-personas.md  index.html  landing.html  persona-evolution-engine.md
docs/evals/: identity-smoke-suite.yaml
examples/: historical_board_pack.yaml  workflow_execution_example.md
examples/archetypes/: analyst.yaml  senior-analyst.yaml  strategic-analyst.yaml  support.yaml  tutor.yaml
examples/identities/: ada-disc.yaml  ada-jungian.yaml  ada-modes.yaml  ada-mood.yaml  ada-ocean.yaml  ada.yaml  builder-generated.yaml  composition-example.yaml  crisis-responder.yaml  disc-detailed.yaml  executive-assistant.yaml  high-trust-board-advisor.yaml  hybrid-example.yaml  hybrid-jungian.yaml  jungian-detailed.yaml  lead-data-scientist.yaml  legal-advisor.yaml  minimal.yaml  mira-dynamics.yaml  mira-modes.yaml  mira-mood.yaml  multi-mixin-agent.yaml  storyteller.yaml  support-team.yaml  voice-and-memory.yaml
examples/mixins/: empathetic.yaml  structured-output.yaml
examples/teams/: data-science-team.yaml  openclaw-core-team.yaml
packs/_gallery/: README.md  index.json
packs/official/boards/strategic-advisory-council/: README.md  pack.json  persona.yaml
packs/official/frameworks/ocean-disc-bridge/: README.md  pack.json  persona.yaml
packs/official/personas/chief-of-staff/: README.md  pack.json  persona.yaml
personanexus-board-skill/: requirements.txt
personanexus-board-skill/board_skill/: __init__.py  board.py  cli.py  compiler.py
personanexus-clawhub-skill/: README.md  SKILL.md
personanexus-clawhub-skill/personanexus_skill/: __init__.py  cli.py  compiler.py  dynamics.py  parser.py  types.py
personanexus-clawhub-skill/templates/: dynamics-example.yaml
personanexus-religion-skill/religion_skill/: cli.py  compiler.py  religion.py
schemas/v1.0/: schema.json
schemas/v2.0/: schema.json
scripts/: compile-team-manifest.py  disc_cleanup.py
skills/personanexus/: README.md  SKILL.md
skills/personanexus/examples/: example-team.yaml
skills/personanexus/scripts/: openclaw-migrator.py
src/personanexus/: __init__.py  analyzer.py  builder.py  cli.py  compiler.py  conflict.py  diff.py  doctor.py  drift.py  dynamics.py  evals.py  evolution.py  linter.py  memory.py  packs.py  parser.py  personality.py  resolver.py  team_types.py  types.py  validator.py
src/personanexus/agents/: coder.yaml
tests/: conftest.py  test_analyzer.py  test_behavioral_modes.py  test_builder.py  test_builder_extended.py  test_cli.py  test_cli_integration.py  test_cli_personality.py  test_compile_targets.py  test_compiler.py  test_compiler_extended.py  test_conflict.py  test_diff.py  test_doctor.py  test_drift.py  test_dynamics.py  test_e2e_workflows.py  test_evals.py  test_evolution.py  test_governance_contracts.py  test_interaction.py  test_linter.py  test_memory.py  test_mood.py  test_packs.py  test_parser.py  test_personality.py  test_relationships.py  test_resolver.py  test_studio.py  test_types.py  test_types_profile.py  test_validation_extended.py  test_validator.py
tests/fixtures/: identity_eval_suite.yaml
web/: README.md  analyze.py  app.py  components.py  evolution_gui.py  model_config.py  studio.py  studio_helpers.py  studio_model.py  wizard.py
web/.streamlit/: config.toml
