[project]
name = "personanexus"
version = "1.4.0"
description = "Production-grade framework for defining, validating, and composing AI agent personas"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PersonaNexus Contributors" }]
keywords = ["ai", "agent", "personanexus", "yaml", "schema", "llm", "personality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.54.0"]
llm = ["openai>=2.21.0", "anthropic>=0.30", "google-generativeai>=0.8"]
all = ["personanexus[web,llm]"]

[project.urls]
Homepage = "https://github.com/PersonaNexus/personanexus"
Repository = "https://github.com/PersonaNexus/personanexus"
"Bug Tracker" = "https://github.com/PersonaNexus/personanexus/issues"

[project.scripts]
personanexus = "personanexus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personanexus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=personanexus --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "C4", "SIM"]
ignore = [
    "S101",   # assert usage — acceptable in tests
    "S603",   # subprocess call — not applicable
    "S607",   # start process with partial path — not applicable
    "B904",   # raise in except without from — intentional for typer.Exit(code=1)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S110"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "twine>=5.0",
    "pre-commit>=3.0",
]
